# Nexus

./: .gitignore  .mcp.json  CLAUDE.md  FIELD_TEST_DOCKER_INSTALL.md  FIELD_TEST_GMAIL_MAIL_SETUP.md  ROADMAP.md  VISION.md  nexus-setup.sh  pyproject.toml
.claude/: settings.json
.claude/tasks/: INDEX.md  NX-001-compact-output.md  NX-002-smart-traversal.md  NX-003-daemon-mode.md  NX-004-web-optimization.md  NX-005-caching-diff.md  NX-006-windows-ocr.md  NX-007-set-of-mark.md  NX-008-electron-cdp.md  NX-009-web-capture-api.md  NX-010-omniparser.md  NX-011-measure-image.md  (+12 more)
docs/: CODE_AUDIT_RESEARCH.md
nexus/: DESIGN.md  NEXUS-CONTEXT.md  NEXUS-IMPROVEMENTS.md  README.md  __init__.py  __main__.py  batch.py  cache.py  cdp.py  electron.py  format.py  hooks.py  mark.py  mcp_server.py  panel.py  recorder.py  run.py  serve.py  server.py  state.py  tools_schema.py  uia.py  watchdog.py  watcher.py
omniparser-server/: README.md  download_models.py  omni_utils.py  requirements.txt  server.py  setup.py
research/: 01_system_dialogs.md  02_electron_accessibility.md  03_macos_automation_landscape.md  04_screenshot_ocr_vision.md  05_macos_accessibility_deep_dive.md
tests/: FIELD_TEST_3_REPORT.md  test_capture.py  test_click.py  test_db.py  test_focus.py  test_graph.py  test_hooks.py  test_intents.py  test_learn.py  test_observe.py  test_ocr.py  test_parse.py  test_permissions.py  test_phase3.py  test_phase4.py  test_plugins.py  test_recipes.py  test_resolve.py  test_skills.py  test_smoke.py  test_state.py  test_system.py  test_templates.py  test_via.py  test_window.py  test_workflows.py
(+85 files in other folders)
