[project]
name = "nexus"
version = "2.0.0"
description = "Three tools for AI to see and control your Mac"
requires-python = ">=3.11"
dependencies = [
    "pyobjc-core>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0",
    "mcp>=1.0",
    "websocket-client>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.2"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["nexus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "action: moves mouse/keyboard (not safe for CI)",
]
